--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,8 @@
-FROM debian:latest
+FROM debian:bullseye
 
 RUN apt-get update && apt-get install -y nginx
 
-COPY conf/nginx.conf /etc/nginx/
+COPY conf/nginx.conf /etc/nginx/conf.d/nginx.conf
 
-CMD ["nginx"]
+CMD ["nginx", "-g", "daemon off;"]
+# CMD ["bash"]
