--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - mariadb_data:/var/lib/mysql
     env_file:
-      - srcs/requirements/mariadb/tools/.env
+      - srcs/.env
     networks:
       - inception_network
 
