--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,6 @@
-DOMAIN_NAME=wil.42.fr
-# certificates
-CERTS_=./XXXXXXXXXXXX
-# MYSQL SETUP
+DOMAIN_NAME=nelidris.42.fr
+CERTS_PATH=./XXXXXXXXXXXX
 MYSQL_ROOT_PASSWORD=the_most_secure_password_ever
 MYSQL_USER=me_and_my_friends
 MYSQL_PASSWORD=the_quickest_password_ever
+MYSQL_DATABASE=wp_db
