--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,8 +1,6 @@
-FROM debian:bullseye
+FROM debian:buster
 
 RUN apt-get update && apt-get install -y mariadb-server
-
-RUN service mariadb start
 
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d
 
