--- a/srcs/.env
+++ b/srcs/.env
@@ -4,3 +4,7 @@ MYSQL_ROOT_PASSWORD=the_most_secure_password_ever
 MYSQL_USER=me_and_my_friends
 MYSQL_PASSWORD=the_quickest_password_ever
 MYSQL_DATABASE=wp_db
+WP_TITILE=THE_BEST_BLOG_EVER
+WP_USER=the_root_user_ever_1337
+WP_PASSWORD=the_best_password_ever
+WP_EMAIL=nelidris@student.1337.ma
