--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3.9"
 
 services:
   nginx:
-    build: srcs/requirements/nginx
+    build: requirements/nginx
     restart: always
     ports:
-      - "80:80"
+      - "443:443"
     volumes:
       - wordpress_data:/var/www/html
     depends_on:
@@ -14,40 +14,40 @@ services:
       - inception_network
 
   wordpress:
-    build: srcs/requirements/wordpress
+    build: requirements/wordpress
     restart: always
     volumes:
       - wordpress_data:/var/www/html
     env_file:
-      - srcs/requirements/wordpress/tools/.env
+      - .env
     networks:
       - inception_network
     depends_on:
       - mariadb
 
   mariadb:
-    build: srcs/requirements/mariadb
+    build: requirements/mariadb
     restart: always
     volumes:
       - mariadb_data:/var/lib/mysql
     env_file:
-      - srcs/.env
+      - .env
     networks:
       - inception_network
 
 volumes:
   wordpress_data:
-    driver: local
-    driver_opts:
-      type: none
-      device: /Users/nelidris/data/wordpress_data
-      o: bind
+    # driver: local
+    # driver_opts:
+    #   type: none
+    #   device: /Users/nelidris/data/wordpress_data
+    #   o: bind
   mariadb_data:
-    driver: local
-    driver_opts:
-      type: none
-      device: /Users/nelidris/data/mariadb_data
-      o: bind
+    # driver: local
+    # driver_opts:
+    #   type: none
+    #   device: /Users/nelidris/data/mariadb_data
+    #   o: bind
 
 networks:
   inception_network:
