--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,10 +1,13 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 443 ssl;
 
     root /var/www/html;
 
     index index.php;
+
+    ssl_certificate /etc/ssl/certs/certificate.crt;
+    ssl_certificate_key /etc/ssl/private/certificate.key;
+    ssl_protocols TLSv1.3;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
