--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,8 +2,7 @@ FROM debian:buster
 
 # Install required packages
 RUN apt-get update && \
-    apt-get install -y curl mariadb-client nginx php-curl php-fpm php-gd php-mbstring php-mysql php-xml php-zip && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y curl php php-fpm php-mysql mariadb-client php-curl php-gd php-json php-mbstring php-xml php-zip sendmail
 
 # Install wp-cli
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
@@ -14,16 +13,4 @@ COPY tools/wp.sh /wp.sh
 
 RUN chmod +x /wp.sh
 
-# # Set up WordPress
-# RUN mkdir -p /var/www/html && \
-#     chown www-data:www-data /var/www/html && \
-#     cd /var/www/html && \
-#     wp core download --allow-root
-
-# RUN sed -i 's/\/run\/php\/php7\.3-fpm\.sock/wordpress:9000/g' /etc/php/7.3/fpm/pool.d/www.conf
-
-# RUN mkdir -p /run/php
-
-# CMD ["php-fpm7.3", "-R", "-F"]
 CMD ["bash", "wp.sh"]
-# CMD ["bash"]
