--- a/srcs/.env
+++ b/srcs/.env
@@ -8,3 +8,5 @@ WP_TITILE=THE_BEST_BLOG_EVER
 WP_USER=the_root_user_ever_1337
 WP_PASSWORD=the_best_password_ever
 WP_EMAIL=nelidris@student.1337.ma
+FTP_USER=ftpuser
+FTP_PASS=testpassword
