--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,6 +13,13 @@ server {
         try_files $uri $uri/ /index.php?$args;
     }
 
+    location = /adminer.php {
+        include mime.types;
+        proxy_pass http://adminer:8080/adminer.php;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location /static_website {  
         proxy_pass http://static_website:3000;  
         proxy_http_version 1.1;  
