--- a/srcs/requirements/bonus/redis_cache/Dockerfile
+++ b/srcs/requirements/bonus/redis_cache/Dockerfile
@@ -1,5 +1,9 @@
 FROM debian:buster
 
-RUN apt-get update && apt-get install -y redis-server
+RUN apt-get update && apt-get install -y redis
 
-CMD ["redis-server"]
+RUN sed -i "s|bind 127.0.0.1|#bind 127.0.0.1|g" /etc/redis/redis.conf && \
+    sed -i "s|# maxmemory <bytes>|maxmemory 2mb|g" /etc/redis/redis.conf && \
+    sed -i "s|# maxmemory-policy noeviction|maxmemory-policy allkeys-lru|g" /etc/redis/redis.conf
+
+CMD ["redis-server", "--protected-mode no"]
