--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,11 +7,11 @@ server {
 
     ssl_certificate /etc/ssl/certs/certificate.crt;
     ssl_certificate_key /etc/ssl/private/certificate.key;
-    ssl_protocols TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
+    # location / {
+    #     try_files $uri $uri/ /index.php?$args;
+    # }
 
     location = /adminer.php {
         include mime.types;
@@ -21,7 +21,7 @@ server {
     }
 
     location /static_website {  
-        proxy_pass http://static_website:3000;  
+        proxy_pass http://static_website:3001;  
         proxy_http_version 1.1;  
         proxy_set_header Upgrade $http_upgrade;  
         proxy_set_header Connection 'upgrade';  
