--- a/srcs/requirements/bonus/ftp_server/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp_server/conf/vsftpd.conf
@@ -6,5 +6,6 @@ chroot_local_user=YES
 passwd_chroot_enable=YES
 local_root=/content
 write_enable=YES
+pasv_enable=YES
 pasv_max_port=40009
 pasv_min_port=40000
