--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,4 @@
-DOMAIN_NAME=localhost
+DOMAIN_NAME=nelidris.42.fr
 CERTS_PATH=./XXXXXXXXXXXX
 MYSQL_ROOT_PASSWORD=the_most_secure_password_ever
 MYSQL_USER=me_and_my_friends
