--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 
 services:
   nginx:
@@ -87,23 +87,23 @@ services:
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro 
-      # - /sys:/sys:ro
+      - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
     restart: always
 
 volumes:
   wordpress_data:
-    # driver: local
-    # driver_opts:
-    #   type: none
-    #   device: /Users/nelidris/data/wordpress_data
-    #   o: bind
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/nelidris/data/wordpress_data
+      o: bind
   mariadb_data:
-    # driver: local
-    # driver_opts:
-    #   type: none
-    #   device: /Users/nelidris/data/mariadb_data
-    #   o: bind
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/nelidris/data/mariadb_data
+      o: bind
 
 networks:
   inception_network:
